--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Sobre min</h1>
+            <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
                 <p class="apresentacao__conteudo__texto">
                 </p>
                 
